[package]
name = "rust-demos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dumbgpt"
path = "src/dumbgpt.rs"

[[bin]]
name = "asciiart"
path = "src/asciiart.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "project-1"
path = "src/project-1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
